--- a/src/components/InteractiveCardHero.module.css
+++ b/src/components/InteractiveCardHero.module.css
@@ -765,7 +765,7 @@
         align-items: center;
         justify-content: flex-start;
         padding-left: 0;
-        padding-top: 100%;
+        padding-top: 43%;
     }
 
     .messageContent {
